# stagecrew

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  INSTALL.sh  LICENSE  README.md  cliff.toml  clippy.toml  justfile  opencode.json  prd.json
.agents/: PROMPT.md  prd.json  progress.txt
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/db/: mod.rs  schema.sql
src/removal/: mod.rs
src/scanner/: mod.rs
src/tui/: dispatcher.rs  input.rs  mod.rs  ui.rs
tests/: cli_add.rs  integration.rs
