[package]
name = "stagecrew"
version = "0.2.0"
edition = "2024"
description = "Disk usage management for shared or staging filesystems with automatic cleanup policies"
license = "MIT"
repository = "https://github.com/nrminor/stagecrew"
homepage = "https://github.com/nrminor/stagecrew"
documentation = "https://docs.rs/stagecrew"
readme = "README.md"
keywords = ["hpc", "disk-usage", "tui", "filesystem", "cleanup"]
categories = ["command-line-utilities", "filesystem"]

[profile.dev]
incremental = true
lto = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
unwrap_used = "deny"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.4", features = ["tracing"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
csv = "1.4.0"
futures = "0.3"
jiff = "0.2.18"
jwalk = "0.8.1"
ratatui = "0.29.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
termbg = "0.6.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
trash = "5.2.5"
tui-piechart = "=0.2.8"
unicode-plot = "0.1.0"
xdg = "3.0.0"

[dev-dependencies]
dirs = "6.0.0"
filetime = "0.2.27"
proptest = "1.9.0"
tempfile = "3.24.0"
tracing-test = "0.2.6"
